Changes due to channel tabs